fix mulequest image wrapping

--- a/src/styles/pages/mulequest.scss
+++ b/src/styles/pages/mulequest.scss
@@ -38,6 +38,13 @@
   }
 }
 
-.figure-mulequest-ui .img {
-  margin: $sm;
+.figure-mulequest-ui {
+
+  @media (max-width: 990px) {
+    flex-direction: column;
+  }
+
+  .img {
+    margin: $sm;
+  }
 }
